# BudgetEX

./: .gitignore  .pre-commit-config.yaml  Budget Manager NEW.spec  Budget Manager.spec  LICENSE  Personal Budget Manager.spec  README.md  budget_app.py  budget_app_core.py  budget_app_main.py  budget_calculator.py  budget_categories.py  budget_charts.py  budget_dashboard.py  budget_data.db  budget_data_manager.py  budget_database.py  budget_file_operations.py  budget_history_tab.py  budget_models.py  budget_period_manager.py  budget_settings.py  budget_time_tracker.py  budget_ui_controls.py  budget_ui_summary.py  budget_ui_table.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_ci_cd.py  table_ui_manager.py
.github/workflows/: ci.yml  code-quality.yml  release.yml
budget-manager/: .gitignore  MANIFEST.in  budget_config.json  config.py  pytest.ini  requirements-test.txt  run_tests.py
budget-manager/.github/workflows/: ci.yml  code-quality.yml  release.yaml
budget-manager/controllers/: __init__.py
budget-manager/models/: budget_model.py
budget-manager/tests/: conftest.py
budget-manager/tests/unit/: test_budget_model.py  test_database_manager.py
controllers/: budget_controller.py.bak
file/: .gitignore  README.md
models/: __init__.py  database_manager.py
tests/: __init__.py
tests/unit/: test_budget_controller.py  test_config.py
